--- a/UESpeechPlugin/Config/DefaultEngine.ini
+++ b/UESpeechPlugin/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Map.Map
 EditorStartupMap=/Game/Map.Map
+GlobalDefaultGameMode=/Script/FunctionalTesting.FunctionalTestGameMode
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
